# cs4240-middle-end

./: .gitignore  README.md  dune-project  run.sh  test.sh  tigerIR.opam
examples/: call.ir  example.ir  quicksort.ir  sqrt.ir
expected/: example.ir  quicksort.ir  sqrt.ir
src/: analysis.ml  cfg.ml  copy.ml  dead.ml  dune  format.ml  fuzz.ml  ir.ml  lexer.mll  optimize.ml  parser.mly
