(ocamllex lexer)
(menhir
  (flags (--explain))
  (modules parser))

(library
  (public_name tigerIR)
  (name tigerIR)
  (modules cfg format ir lexer parser)
  (libraries ocamlgraph))

(executable
  (name optimize)
  (modules analysis fuzz optimize copy dead)
  (libraries menhirLib ocamlgraph tigerIR))
